<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <EditText android:layout_height="wrap_content" android:layout_width="300dip" android:layout_gravity="center_horizontal" android:text="@string/srcFileStr" android:id="@+id/macSetSrcFile"></EditText>
    <EditText android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="300dip" android:text="@string/macFile" android:id="@+id/macSetMacFile"></EditText>
    <RadioGroup android:layout_width="wrap_content" android:layout_gravity="center_horizontal" android:layout_height="wrap_content" android:id="@+id/macSetRG">
        <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:checked="true" android:layout_gravity="left" android:text="@string/macAlg1" android:id="@+id/macSetR1"></RadioButton>
        <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_gravity="left" android:text="@string/macAlg2" android:id="@+id/macSetR2"></RadioButton>
    </RadioGroup>
    <Button android:layout_height="wrap_content" android:layout_width="200dip" android:layout_gravity="center_horizontal" android:text="@string/macSetStr" android:id="@+id/macSetMenuBtn"></Button>
</LinearLayout>
