<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
    <Button android:layout_height="wrap_content" android:text="@string/signStr" android:layout_width="200dip" android:layout_gravity="center_horizontal" android:id="@+id/signSetBtn"></Button>
    <Button android:layout_height="wrap_content" android:text="@string/signCheck" android:layout_width="200dip" android:layout_gravity="center_horizontal" android:id="@+id/signCheckBtn"></Button>
    <Button android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:layout_width="200dip" android:text="@string/keyCreatStr" android:id="@+id/signCreatKeyBtn"></Button>
</LinearLayout>
